hphp/hack/test/typecheck/hh_fixme3.php.exp
File "hh_fixme3.php", line 4, characters 19-24:
HH_FIXME wrong format, expected '/* HH_FIXME[ERROR_NUMBER] */' (Parsing[1001])
